--- a/index.html
+++ b/index.html
@@ -35,17 +35,21 @@
 
         // Array.prototype.filter()
         // 1. Filter the list of inventors for those who were born in the 1500's
-        const fifteen = inventors.filter(inventor => {
-            if(inventor.year >= 1500 && inventor.year < 1600) {
-                return true;
-            }
-        });
-        // console.log(fifteen)
-        // console.table(fifteen)
+
+            const fifteen = inventors.filter(inventor => {
+                if(inventor.year >= 1500 && inventor.year < 1600) {
+                    return true;
+                }
+            });
+
+            // ----------- OR ------------
+
+            const fifteen2 = inventors.filter(inventor => (
+                inventor.year >= 1500 && inventor.year < 1600
+            ))
 
         // Array.prototype.map()
         // 2. Give us an array of the inventors first and last names
-        
 
         // Array.prototype.sort()
         // 3. Sort the inventors by birthdate, oldest to youngest
