--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
         // Array.prototype.map()
         // 2. Give us an array of the inventors first and last names
 
+            const fullNames = inventors.map(inventor => 
+                `${inventor.first} ${inventor.last}`
+            );
+
+            // ----------- OR ------------
+
+            const fullNames2 = inventors.map(inventor => 
+                inventor.first + " " + inventor.last
+            );
+
         // Array.prototype.sort()
         // 3. Sort the inventors by birthdate, oldest to youngest
 
