2 methods of sorting exercise

--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
         // Array.prototype.sort()
         // 3. Sort the inventors by birthdate, oldest to youngest
 
+            const order = inventors.sort(function(firstPerson, secondPerson) {
+                if(firstPerson.year > secondPerson.year) {
+                    return 1;
+                } else {
+                    return -1;
+                }
+            });
+
+            // ----------- OR ------------
+
+            const order2 = inventors.sort((firstPerson, secondPerson) => 
+                firstPerson.year > secondPerson.year ? 1 : -1
+            );
+
         // Array.prototype.reduce()
         // 4. How many years did all the inventors live all together?
 
