--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
         // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
         // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+            // Locating targeted div 
+            const category = document.querySelector(".mw-category");
+            // Locating links with "de"
+            const links = Array.from(category.querySelectorAll("de"));
+            // Locating Streetnames with "de"
+            const de = links
+                .map(link => link.textContent)
+                .filter(streetName => streetName.includes("de"));
 
         // 7. sort Exercise
         // Sort the people alphabetically by last name
