--- a/index.html
+++ b/index.html
@@ -111,16 +111,27 @@
         // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
             // Locating targeted div 
-            const category = document.querySelector(".mw-category");
+            // const category = document.querySelector(".mw-category");
             // Locating links with "de"
-            const links = Array.from(category.querySelectorAll("de"));
+            // const links = Array.from(category.querySelectorAll("de"));
             // Locating Streetnames with "de"
-            const de = links
-                .map(link => link.textContent)
-                .filter(streetName => streetName.includes("de"));
+            // const de = links
+                // .map(link => link.textContent)
+                // .filter(streetName => streetName.includes("de"));
 
         // 7. sort Exercise
         // Sort the people alphabetically by last name
+
+            const alpha = people.sort(function(lastOne, nextOne) {
+                // ------ DESTRUCTURING THE ARRAY -------
+                // returns an array of { lastName: "", firstName: ""} for each 
+                const parts = lastOne.split(", ")
+                // return an array [lastName firstName] for each
+                const [aLast, aFirst] = lastOne.split(", ");
+                const [bLast, bFirst] = nextOne.split(", ");
+
+                return aLast > bLast ? -1 : 1;
+            });
 
         // 8. Reduce Exercise
         // Sum up the instances of each of these
