--- a/index.html
+++ b/index.html
@@ -122,7 +122,12 @@
         // 7. sort Exercise
         // Sort the people alphabetically by last name
 
+            // METHODS
+            // 1.
             const alpha = people.sort(function(lastOne, nextOne) {
+            // 2.
+            // const alpha2 = people.sort((lastOne, nextOne) => {
+                
                 // ------ DESTRUCTURING THE ARRAY -------
                 // returns an array of { lastName: "", firstName: ""} for each 
                 const parts = lastOne.split(", ")
